@@ -25,10 +25,6 @@
 			<real>0</real>
 			<key>offsetY</key>
 			<real>-1</real>
-			<key>originalWidth</key>
-			<integer>85</integer>
-			<key>originalHeight</key>
-			<integer>-121</integer>
 		</dict>
 		<key>grossini_dance_02.png</key>
 		<dict>
