@@ -2,6 +2,7 @@ version 0.9.0-rc0 - XX-Jan-2010
  . Actions: added 2 new instant actions: FlipX and FlipY (counter-rollback of part issue #620)
  . Sprite: anchor + offset + scale works  (issue #671)
  . SpriteFrame: removed support for flipX and flipY  (rollback of a part issue #620)
+ . SpriteFrameCache: If originalSize is not present, display warning (issue #670)
  
 version 0.9.0-beta - 14-Dic-2009
  . ActionManager: fixed leak (issue #635)
